Formate | Remove non-relative changes